* Changelog

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.22...dev][Unreleased]]

*** Added
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.22...v0.2.23][v0.2.23]] - 2022-10-09

*** Added
+ *tetragono*: Add =ap_hamiltonian= to replace the hamiltonian of the ansatz product state in tetragono shell.
+ *tetragono*: Add =multichain_number= for =ap_run=, which will run multiple chains inside the same MPI process.
+ *wrapper*: Add python package =wrapper_TAT= to provide a wrapper over torch to provide similar interface as =TAT.py=.
+ *tetragono*: Add =observe_max_batch_size= option for =ap_run=, which will set the max limit of batch size when
  calculating wss.
*** Deprecated
+ *tetragono*: =gm_data_load= is deprecated, it will be removed in the future, please use =gm_hamiltonian= to replace
  the hamiltonian instead.
*** Removed
+ *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is removed. The state will be saved for every
  step.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.20...v0.2.22][v0.2.22]] - 2022-09-02

*** Added
+ *tetragono*: Add =save_configuration_file= option for =gm_run= and =ap_run= in tetragono shell, which saves sampling
  configurations during gradient descent.
+ *tetragono*: Add list as interface for =rename_io= in =tetragono.common_tensor.tensor_toolkit=. Original argument such
  as ={0: a, 1: b, 2: c}= can be written as =[a, b, c]=.
*** Deprecated
+ *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is deprecated. The state will be saved for every
  step if =save_state_file= was not set in the future.
*** Removed
+ *tetragono*: The original function name =create= to create lattice is removed, which was deprecated in v0.2.18. The
  new function name to create lattice is =abstract_lattice=.
+ *tetragono*: =_owner= of Configuration for sampling lattice and ansatz product state is removed, use =owner= instead.
*** Fixed