@@ -6,6 +6,7 @@
 *** Changed
 *** Deprecated
 *** Removed
++ *tetragono*: =gm_data_load= is removed, please use =gm_hamiltonian= to replace the hamiltonian instead.
 *** Fixed
 
 ** [[https://github.com/hzhangxyz/TAT/compare/v0.2.22...v0.2.23][v0.2.23]] - 2022-10-09
